--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "typings": "drop-down.d.ts",
   "nativescript": {
     "platforms": {
-      "ios": "4.0.0",
-      "android": "4.0.0"
+      "android": "6.0.0",
+      "ios": "6.0.1"
     },
     "plugin": {
       "nan": "true",
@@ -45,25 +45,15 @@
     "tns-core-modules": ">= 5"
   },
   "devDependencies": {
-    "@angular/common": "^5.2.11",
-    "@angular/compiler": "^5.2.11",
-    "@angular/compiler-cli": "^5.2.11",
-    "@angular/core": "^5.2.11",
-    "@angular/forms": "^5.2.11",
-    "@angular/http": "^5.2.11",
-    "@angular/platform-browser": "^5.2.11",
-    "@angular/platform-browser-dynamic": "^5.2.11",
-    "@angular/router": "^5.2.11",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
     "grunt-contrib-copy": "1.0.0",
     "grunt-exec": "2.0.0",
-    "nativescript-angular": "^5.3.0",
-    "rxjs": "~5.5.6",
-    "tns-core-modules": "^4.0.1",
-    "tns-platform-declarations": "^4.0.0",
-    "tslint": "^4.5.1",
-    "typescript": "^2.6.2",
-    "zone.js": "~0.8.12"
+    "rxjs": "~6.0.0",
+    "tns-core-modules": "^6.0.0",
+    "tns-platform-declarations": "^6.4.1",
+    "tslint": "^5.12.1",
+    "typescript": "~3.4.5",
+    "zone.js": "^0.8.12"
   }
 }
